tests-integration/fixtures/checking/153_derive_contravariant_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Identity :: forall (a :: Type). (a :: Type) -> Identity (a :: Type)
Producer :: forall (a :: Type). (Int -> (a :: Type)) -> Producer (a :: Type)

Types
Identity :: Type -> Type
Producer :: Type -> Type

Data
Identity
  Quantified = :0
  Kind = :0

Producer
  Quantified = :0
  Kind = :0


Roles
Identity = [Representational]
Producer = [Representational]

Derived
derive Contravariant (Identity :: Type -> Type)
derive Contravariant (Producer :: Type -> Type)

Diagnostics
error[CovariantOccurrence]: Type variable occurs in covariant position: (~&0 :: Type)
  --> 7:1..7:39
  |
7 | derive instance Contravariant Identity
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CovariantOccurrence]: Type variable occurs in covariant position: (~&0 :: Type)
  --> 11:1..11:39
   |
11 | derive instance Contravariant Producer
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
